BJS2-19329 need to realize optimize methods